- Latest versions of PHP 5.4 demand that email messages encodings are explicitly defined in GO, and so they are now.
- RecurrencePattern could go into endless loop
- TreeSelect custom field will display the value formatted correctly
- The quick add bar for tasks will use the specified date for begin and end time of task
- Updated Norwegian translation

29-10-2012 4.0.121
- New log file contained too much info.
- Make relative image urls absolute in rss feeds
- Updated Italian translation

29-10-2012 4.0.120
- Changed order of the add and delete button in the standard T-bar of the gridPanels
- Make title of exportDialog translatable
- Added more space between the product amount and the tax per line in the Billing PDF
- MoreData support in syncml
- Errors logged to Group-Office log file accessible with file manager by admins
- Fixed deleting of old versioned files

25-10-2012 4.0.119
- Table load speed optimization with multiselectgrid for addressbook, tickets, notes. tasks and billing
- Default status of calendar event is accepted
- Disable editing and deleting of merged events when viewing multiple calendars
- Fixed html display of emails with multiple body tags

25-10-2012 4.0.118
- E-mail showing malicious content bug

24-10-2012 4.0.117
- Option to open/close a selected week for all users (Billing, Time Registration, Hours Approval).
- Reminders were not synced with Outlook
- Links were not clickable from e-mail portlet
- Conflicting events check didn't work with busy flag and repeating events
- SMTP password wasn't updated on LDAP login
- Shared folders could appear twice in the shares tree
- Create folder permission check failed if a parent folder didn't exist
- Added Incomplete filter to the tasks list
- Links in email window on startpage didn't work
- Unset invalid attributes while using importVObject function in Contact model.
- Throw a fileNotFound exception when a file that needs to be downloaded is not found on the server.
- Updated German translation
