@@ -99,7 +99,7 @@ Ext.extend(GO.addressbook.MailingDialog, Ext.Window,{
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope: this
 				
