@@ -157,7 +157,7 @@ Ext.extend(GO.backupmanager.MainPanel, Ext.Panel,{
 			},
 			failure:function(form, action)
 			{
-			//Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+			//GO.errorDialog.show(action.result.feedback)
 			},
 			scope: this
 		});
