@@ -85,7 +85,7 @@ Ext.extend(GO.calendar.GroupDialog, GO.Window, {
 				},
 				failure : function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope : this
 			});            
