@@ -170,7 +170,7 @@ Ext.extend(GO.sieve.SieveDialog, GO.Window, {
 					},
 					failure:function(form, action)
 					{
-						Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+						GO.errorDialog.show(action.result.feedback)
 					},
 					scope: this
 				});		
