@@ -76,7 +76,7 @@ Ext.extend(GO.summary.AnnouncementDialog, Ext.Window,{
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope: this
 			});
