@@ -207,7 +207,7 @@ Ext.extend(GO.tasks.TasklistDialog, Ext.Window, {
 			},
 			failure:function(form, action)
 			{
-				Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+				GO.errorDialog.show(action.result.feedback)
 			},
 			scope: this
 		});
