@@ -106,7 +106,7 @@ Ext.extend(GO.LinkFolderWindow, GO.Window,{
 				},
 				failure:function(form, action)
 				{
-					Ext.Msg.alert(GO.lang['strError'], action.result.feedback)
+					GO.errorDialog.show(action.result.feedback)
 				},
 				scope: this
 				
